Fix issue with modal image too close to modal close

--- a/css/components/_carousel.scss
+++ b/css/components/_carousel.scss
@@ -179,6 +179,10 @@
       padding: 10px;
       grid-gap: 2px;
       width: 85vw;
+
+      .image{
+        max-width: 80%;
+      }
     }
   }
 }
